# docs/swagger.json
@@ -67,7 +67,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "The registration request was succesfull and a verification\nemail has been sent to the specified email address",
+                        "description": "The registration request was succesfull and a verification email has been sent to the specified email address",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -104,7 +104,7 @@
                                         },
                                         "message": {
                                             "type": "string",
-                                            "example": "Registration successfull, please check your email for\nverification instructions"
+                                            "example": "Registration successfull, please check your email for verification instructions"
                                         }
                                     }
                                 }
@@ -165,7 +165,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "The registration request was succesfull and a verification\nemail has been sent to the specified email address",
+                        "description": "The registration request was succesfull and a verification email has been sent to the specified email address",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -202,7 +202,7 @@
                                         },
                                         "message": {
                                             "type": "string",
-                                            "example": "Registration successfull, please check your email for\nverification instructions"
+                                            "example": "Registration successfull, please check your email for verification instructions"
                                         }
                                     }
                                 }
@@ -215,7 +215,7 @@
         "/accounts/verify-email": {
             "post": {
                 "tags": ["accounts"],
-                "summary": "verify a new account with a verification token received via email after\nregistration",
+                "summary": "verify a new account with a verification token received via email after registration",
                 "operationId": "verifyEmail",
                 "requestBody": {
                     "required": true,
@@ -409,7 +409,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Account created successfully, verification is not required\nfor accounts created with this endpoint. The details of the new account\nare returned.",
+                        "description": "Account created successfully, verification is not required for accounts created with this endpoint. The details of the new account are returned.",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -550,7 +550,7 @@
             "get": {
                 "tags": ["accounts"],
                 "summary": "Get a single account by id",
-                "description": "Admin users can access any account, regular users are restricted\nto their own account",
+                "description": "Admin users can access any account, regular users are restricted to their own account",
                 "operationId": "getaccountbyid",
                 "security": [
                     {
@@ -613,7 +613,7 @@
             "put": {
                 "tags": ["accounts"],
                 "summary": "Update an account",
-                "description": "Admin users can update any account, regular users are restricted\nto their own account and soon they wont be able to update role",
+                "description": "Admin users can update any account, regular users are restricted to their own account and soon they wont be able to update role",
                 "operationId": "updateaccount",
                 "security": [
                     {
@@ -663,7 +663,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Account updated successfully. The details of the updated user\nare returned",
+                        "description": "Account updated successfully. The details of the updated user are returned",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -713,7 +713,7 @@
             "delete": {
                 "tags": ["accounts"],
                 "summary": "Delete an account",
-                "description": "Admin users can delete any account, regular users are restricted\nto their own account.",
+                "description": "Admin users can delete any account, regular users are restricted to their own account.",
                 "operationId": "deleteaccount",
                 "security": [
                     {
@@ -1483,7 +1483,7 @@
             "delete": {
                 "tags": ["menu"],
                 "summary": "Delete Menu",
-                "description": "Deletes Menu and items associated with the menu. Restricted to\nowners",
+                "description": "Deletes Menu and items associated with the menu. Restricted to owners",
                 "security": [
                     {
                         "bearerAuth": []
@@ -2486,7 +2486,7 @@
                 }
             }
         },
-        "/company/{company_id}/company-orders": {
+        "/company/{company_id}/order/company-orders": {
             "get": {
                 "tags": ["order"],
                 "parameters": [
@@ -2570,30 +2570,6 @@
                                                         "type": "string",
                                                         "example": "2020-05-08T03:11:21.553Z"
                                                     },
-                                                    "items": {
-                                                        "type": "array",
-                                                        "items": {
-                                                            "type": "object",
-                                                            "properties": {
-                                                                "id": {
-                                                                    "type": "number",
-                                                                    "example": 1
-                                                                },
-                                                                "order_id": {
-                                                                    "type": "number",
-                                                                    "example": 1
-                                                                },
-                                                                "item_id": {
-                                                                    "type": "number",
-                                                                    "example": 1
-                                                                },
-                                                                "quantity": {
-                                                                    "type": "number",
-                                                                    "example": 45
-                                                                }
-                                                            }
-                                                        }
-                                                    },
                                                     "customer": {
                                                         "type": "object",
                                                         "properties": {
@@ -2626,40 +2602,40 @@
                                                                 "example": "https://jhffjkdshfjkfhdsjkhfkjs.com"
                                                             }
                                                         }
-                                                    },
-                                                    "pageInfo": {
-                                                        "type": "object",
-                                                        "properties": {
-                                                            "total": {
-                                                                "type": "integer",
-                                                                "example": 30
-                                                            },
-                                                            "remaining": {
-                                                                "type": "integer",
-                                                                "example": 20
-                                                            },
-                                                            "hasMore": {
-                                                                "type": "boolean",
-                                                                "example": true
-                                                            },
-                                                            "hasPrevious": {
-                                                                "type": "boolean",
-                                                                "example": true
-                                                            },
-                                                            "hasNext": {
-                                                                "type": "boolean",
-                                                                "example": true
-                                                            },
-                                                            "next": {
-                                                                "type": "string",
-                                                                "example": "KGRhdGUpMjAyMS0wMi0wNFQwMDo1ODoyOS4xODNa"
-                                                            },
-                                                            "previous": {
-                                                                "type": "string",
-                                                                "example": "KGRhdGUpMjAyMS0wMi0wNFQwMDo1ODoyOS4xODNat"
-                                                            }
-                                                        }
                                                     }
+                                                }
+                                            }
+                                        },
+                                        "pageInfo": {
+                                            "type": "object",
+                                            "properties": {
+                                                "total": {
+                                                    "type": "integer",
+                                                    "example": 30
+                                                },
+                                                "remaining": {
+                                                    "type": "integer",
+                                                    "example": 20
+                                                },
+                                                "hasMore": {
+                                                    "type": "boolean",
+                                                    "example": true
+                                                },
+                                                "hasPrevious": {
+                                                    "type": "boolean",
+                                                    "example": true
+                                                },
+                                                "hasNext": {
+                                                    "type": "boolean",
+                                                    "example": true
+                                                },
+                                                "next": {
+                                                    "type": "string",
+                                                    "example": "KGRhdGUpMjAyMS0wMi0wNFQwMDo1ODoyOS4xODNa"
+                                                },
+                                                "previous": {
+                                                    "type": "string",
+                                                    "example": "KGRhdGUpMjAyMS0wMi0wNFQwMDo1ODoyOS4xODNat"
                                                 }
                                             }
                                         }
@@ -2721,7 +2697,7 @@
                 }
             },
             "UnauthorizedError": {
-                "description": "Access token is missing or invalid, or the user does not have access\nto perform the action",
+                "description": "Access token is missing or invalid, or the user does not have access to perform the action",
                 "content": {
                     "application/json": {
                         "schema": {
